# ashashala

./: .gitignore  LICENSE  PROJECT_PROMPT.md  README.md  info-claude.txt
ashashala/backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
ashashala/backend/alembic/: README.md  env.py
ashashala/backend/alembic/versions/: 20260709_0000_baseline_pre_alembic_tables.py  20260710_0001_dynamic_rbac_agent_actions.py  20260710_0002_phase2_scheduler_notifications_timetable.py  20260710_0003_phase3_learning_feed.py  20260711_0004_phase4_reports_comms.py  20260712_0005_assignment_builder_staffing.py  20260713_0006_rbac_user_roles_fk.py  20260713_0007_users_tokens_valid_after_documents_page_count.py
ashashala/backend/app/: deps.py  main.py
ashashala/backend/app/agents/: communication.py  evaluator.py  graph.py  insight.py  json_utils.py  orchestrator.py  progress.py  quiz_master.py  quiz_suggest.py  reporting.py  safety.py  scheduled_learning.py  scheduling.py  staffing.py  state.py  tutor.py
ashashala/backend/app/auth/: jwt.py  password.py  routes.py
ashashala/backend/app/core/: config.py  exceptions.py  permissions.py  ratelimit.py  scheduler.py
ashashala/backend/app/db/: base.py  session.py  tenant_filter.py
ashashala/backend/app/models/: __init__.py  agent_action.py  assignment.py  audit.py  communication.py  document.py  feed.py  flagged_answer.py  learning.py  llm_usage.py  mixins.py  notification.py  notification_preference.py  rbac.py  refresh_token.py  report.py  school.py  staffing.py  structure.py  timetable.py  user.py
ashashala/backend/app/routes/: admin.py  agent_actions.py  health.py  notifications.py  parent.py  school_admin.py  student.py  teacher.py
ashashala/backend/app/schemas/: admin.py  agent_action.py  auth.py  notification.py  pagination.py  parent.py  quiz.py  rbac.py  report.py  school_admin.py  teacher.py
ashashala/backend/app/services/: agent_action_handlers.py  usage.py  (+16 more)
ashashala/backend/scripts/: render_catchup.sql  seed.py
ashashala/backend/tests/: __init__.py  conftest.py  test_admin_audit.py  test_assignment_enrollment_history.py  test_communication_agent.py  test_dpdp_consent.py  test_frontend_catchup_endpoints.py  test_insight_agent.py  test_notification_dispatch.py  test_notification_preferences.py  test_parent_messages.py  test_parent_reports_routes.py  test_phase1_health.py  test_phase1_llm_router.py  test_phase2_audit.py  test_phase2_ingestion_url.py  test_phase2_ingestion_youtube.py  test_phase2_parent.py  test_phase2_rag.py  test_phase2_rbac.py  test_phase2_tenant_isolation.py  test_phase2_timetable.py  test_phase3_gujarati.py  test_phase3_length_budget.py  test_phase3_streaming.py  test_phase3_tutor.py  test_phase4_agents.py  test_phase5_pickers.py  test_phase5_safety_topic.py  test_phase6_ocr.py  test_phase6_safety.py  test_phase6_voice.py  test_phase8_hardening.py  test_phase_rbac_dynamic.py  test_quiz_suggest_and_assignments.py  test_reporting_agent.py  test_scheduled_learning_agent.py  test_scheduler.py  test_scheduling_agent.py  test_staffing_agent.py  (+1 more)
(+141 files in other folders)
