[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashashala-backend"
version = "0.1.0"
description = "AshaShala Agentic AI Tutoring Platform Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "python-dotenv==1.0.1",
    "sqlalchemy[asyncio]==2.0.35",
    "asyncpg==0.29.0",
    "alembic==1.13.2",
    "google-generativeai==0.8.3",
    "openai==1.54.0",
    "qdrant-client==1.12.1",
    "boto3==1.35.30",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "email-validator==2.2.0",
    "pypdf==5.1.0",
    "python-docx==1.1.2",
    "trafilatura==1.12.2",
    "youtube-transcript-api==0.6.2",
    "sentry-sdk[fastapi,sqlalchemy]==2.19.1",
    "structlog==24.1.0",
    "httpx==0.27.2",
    "tenacity==8.5.0",
    "pyyaml==6.0.1",
    "python-json-logger==2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "aiosqlite==0.20.0",
    "faker==25.5.1",
    "ruff==0.6.9",
    "black==24.10.0",
    "mypy==1.11.2",
    "pre-commit==3.8.0",
    "ipython==8.28.0",
    "ipdb==0.13.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in default arguments
]
per-file-ignores = {
    "tests/*": ["S101", "S106"],  # allow assert and hardcoded passwords in tests
}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
pretty = true

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.pytest-cov]
cov_report = ["term-missing", "html"]